--- a/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/factures-detail/factures-detail.component.html
+++ b/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/factures-detail/factures-detail.component.html
@@ -97,7 +97,7 @@
                         </nz-input-group>
 
                         <div style="margin-top: 10px; margin-bottom: 10px;">
-                            <nz-switch [(ngModel)]="switchValue" nzCheckedChildren="Appliquer TVA" nzUnCheckedChildren="Pas de TVA"></nz-switch>
+                            <nz-switch [(ngModel)]="switchValue" nzCheckedChildren="TVA applicable" nzUnCheckedChildren="TVA non applicable"></nz-switch>
                         </div>
 
 
