--- a/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/accueil/accueil.component.html
+++ b/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/accueil/accueil.component.html
@@ -86,7 +86,7 @@
                     Mois en cours : Janvier 2022
                 </div>
                 <div nz-row>
-                    <div nz-col nzSpan="6">
+                    <div nz-col nzFlex="1">
                         <div class="mois-infos">
                             <div class="mois-infos-titre">
                                 Total
@@ -96,7 +96,7 @@
                             </div>
                         </div>
                     </div>
-                    <div nz-col nzSpan="6">
+                    <div nz-col nzFlex="1">
                         <div class="mois-infos">
                             <div class="mois-infos-titre">
                                 À saisir
@@ -106,7 +106,17 @@
                             </div>
                         </div>
                     </div>
-                    <div nz-col nzSpan="6">
+                    <div nz-col nzFlex="1">
+                        <div class="mois-infos">
+                            <div class="mois-infos-titre">
+                                Saisis
+                            </div>
+                            <div class="mois-infos-chiffre">
+                                4
+                            </div>
+                        </div>
+                    </div>
+                    <div nz-col nzFlex="1">
                         <div class="mois-infos">
                             <div class="mois-infos-titre">
                                 Validés
@@ -116,7 +126,7 @@
                             </div>
                         </div>
                     </div>
-                    <div nz-col nzSpan="6">
+                    <div nz-col nzFlex="1">
                         <div class="mois-infos">
                             <div class="mois-infos-titre">
                                 Rejetés
@@ -138,7 +148,7 @@
                     Mois en cours : Janvier 2022
                 </div>
                 <div nz-row>
-                    <div nz-col nzSpan="8">
+                    <div nz-col nzFlex="1">
                         <div class="mois-infos">
                             <div class="mois-infos-titre">
                                 Total
@@ -148,7 +158,7 @@
                             </div>
                         </div>
                     </div>
-                    <div nz-col nzSpan="8">
+                    <div nz-col nzFlex="1">
                         <div class="mois-infos">
                             <div class="mois-infos-titre">
                                 A Envoyer
@@ -158,7 +168,27 @@
                             </div>
                         </div>
                     </div>
-                    <div nz-col nzSpan="8">
+                    <div nz-col nzFlex="1">
+                        <div class="mois-infos">
+                            <div class="mois-infos-titre">
+                                A Contrôler
+                            </div>
+                            <div class="mois-infos-chiffre">
+                                10
+                            </div>
+                        </div>
+                    </div>
+                    <div nz-col nzFlex="1">
+                        <div class="mois-infos">
+                            <div class="mois-infos-titre">
+                                Envoyées
+                            </div>
+                            <div class="mois-infos-chiffre">
+                                10
+                            </div>
+                        </div>
+                    </div>
+                    <div nz-col nzFlex="1">
                         <div class="mois-infos">
                             <div class="mois-infos-titre">
                                 Validés
@@ -180,7 +210,7 @@
                     Mois en cours : Janvier 2022
                 </div>
                 <div nz-row>
-                    <div nz-col nzSpan="8">
+                    <div nz-col nzFlex="1">
                         <div class="mois-infos">
                             <div class="mois-infos-titre">
                                 Demandes
@@ -190,7 +220,7 @@
                             </div>
                         </div>
                     </div>
-                    <div nz-col nzSpan="8">
+                    <div nz-col nzFlex="1">
                         <div class="mois-infos">
                             <div class="mois-infos-titre">
                                 Validés
@@ -200,8 +230,21 @@
                             </div>
                         </div>
                     </div>
+                    <div nz-col nzFlex="1">
+                        <div class="mois-infos">
+                            <div class="mois-infos-titre">
+                                Rejetés
+                            </div>
+                            <div class="mois-infos-chiffre">
+                                20
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+    </div>
+    <div style="height: 10vh;">
+
     </div>
 </div>
