--- a/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/evaluations/evaluations.component.html
+++ b/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/evaluations/evaluations.component.html
@@ -226,6 +226,67 @@
                 </nz-table>
             </div>
         </div>
+        <div *ngIf="validees">
+            <div style="margin:40px">
+                <div style="margin-bottom:20px">
+                    <div nz-row>
+                        <div nz-col nzSpan="16">
+
+                        </div>
+                        <div nz-col nzSpan="4">
+                            <div>
+                                <nz-input-group nzSearch [nzAddOnAfter]="prefixTemplateUser">
+                                    <input type="text" nz-input placeholder="Rechercher une évaluation" />
+                                </nz-input-group>
+                                <ng-template #prefixTemplateUser>
+                                    <button nz-button nzType="primary" nzSearch>
+                                    <i nz-icon nzType="search"></i>
+                                </button>
+                                </ng-template>
+                            </div>
+                        </div>
+                        <div nz-col nzSpan="4">
+                            <div style="margin-left: 20px">
+                                <nz-input-group nzSearch [nzSuffix]="prefixTemplateUser2">
+                                    <input type="text" nz-input placeholder="Chercher une date" />
+                                </nz-input-group>
+                                <ng-template #prefixTemplateUser2>
+
+                                    <i nz-icon nzType="calendar" style="color: #F759AB"></i>
+
+                                </ng-template>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <nz-table #sortTable [nzData]="listOfDataEnAttente" nzTableLayout="fixed">
+                    <thead>
+                        <tr>
+
+                            <th *ngFor="let column of listOfColumn2" [nzSortFn]="column.compare" [nzSortPriority]="column.priority">
+                                <b>
+                                    {{ column.title }}
+                                </b>
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let data of sortTable.data">
+
+                            <td>{{ data.name }}</td>
+                            <td>{{ data.chinese }}</td>
+
+                            <td>{{ data.math2 }}</td>
+                            <td>
+
+                                <a href="#">Prévisualiser</a> &nbsp; &nbsp;
+                            </td>
+                        </tr>
+                    </tbody>
+                </nz-table>
+            </div>
+        </div>
     </div>
 
 </div>
