--- a/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/factures/factures.component.html
+++ b/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/factures/factures.component.html
@@ -21,6 +21,12 @@
                     03
                 </span>
             </li>
+            <li nz-menu-item (click)="selectionner('rejetees')" [nzSelected]="rejetees">
+                <span class="menu-design">Envoyées</span>
+                <span class="badge">
+                    03
+                </span>
+            </li>
             <li nz-menu-item (click)="selectionner('enAttente')" [nzSelected]="enAttente">
                 <span class="menu-design">Archivés</span>
                 <span class="badge">
@@ -107,6 +113,67 @@
                                     {{ data.math2 }}
                                 </span>
                             </td>
+                            <td>
+                                <a routerLink="/factures/detail">Modifier</a> &nbsp;&nbsp;
+                                <a routerLink="/factures/detail">Archiver</a> &nbsp;&nbsp;
+                            </td>
+                        </tr>
+                    </tbody>
+                </nz-table>
+            </div>
+        </div>
+        <div *ngIf="rejetees">
+            <div style="margin:40px">
+                <div style="margin-bottom:20px">
+                    <div nz-row>
+                        <div nz-col nzSpan="16">
+
+                        </div>
+                        <div nz-col nzSpan="4">
+                            <div>
+                                <nz-input-group nzSearch [nzAddOnAfter]="prefixTemplateUser">
+                                    <input type="text" nz-input placeholder="Rechercher une évaluation" />
+                                </nz-input-group>
+                                <ng-template #prefixTemplateUser>
+                                    <button nz-button nzType="primary" nzSearch>
+                                        <i nz-icon nzType="search"></i>
+                                    </button>
+                                </ng-template>
+                            </div>
+                        </div>
+                        <div nz-col nzSpan="4">
+                            <div style="margin-left: 20px">
+                                <nz-input-group nzSearch [nzSuffix]="prefixTemplateUser2">
+                                    <input type="text" nz-input placeholder="Chercher une date" />
+                                </nz-input-group>
+                                <ng-template #prefixTemplateUser2>
+
+                                    <i nz-icon nzType="calendar" style="color: #F759AB"></i>
+
+                                </ng-template>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <nz-table #sortTable [nzData]="listOfData" nzTableLayout="fixed">
+                    <thead>
+                        <tr>
+                            <th style="width: 80px;" [nzChecked]="false"></th>
+                            <th *ngFor="let column of listOfColumn" [nzSortFn]="column.compare" [nzSortPriority]="column.priority">
+                                <b>
+                                    {{ column.title }}
+                                </b>
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let data of sortTable.data">
+                            <td style="width: 80px;" [nzChecked]="false"></td>
+                            <td>{{ data.name }}</td>
+                            <td>{{ data.chinese }}</td>
+                            <td>{{ data.math }}</td>
+                            <td>{{ data.math2 }}</td>
                             <td>
                                 <a routerLink="/factures/detail">Modifier</a> &nbsp;&nbsp;
                                 <a routerLink="/factures/detail">Archiver</a> &nbsp;&nbsp;
