--- a/Documents/Developpement/AngularProjects/temeritati-admin/src/app/app.component.html
+++ b/Documents/Developpement/AngularProjects/temeritati-admin/src/app/app.component.html
@@ -43,6 +43,12 @@
         </a>
     </li>
     <li nz-menu-item style="float: right">
+        <a (click)="documents()">
+            <i nz-icon nzType="book"></i>
+            <span style="margin-left: 8px">Documents Contractuels</span>
+        </a>
+    </li>
+    <li nz-menu-item style="float: right">
         <a (click)="factures()">
             <i nz-icon nzType="book"></i>
             <span style="margin-left: 8px">Factures</span>
