--- a/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/factures-detail/factures-detail.component.html
+++ b/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/factures-detail/factures-detail.component.html
@@ -112,7 +112,7 @@
                     <div nz-col nzSpan="24">
 
                         <div class="libelle">
-                            Justificatif
+                            Prévisualiser la facture
                         </div>
                         <p class="mission-valeur" style="display: none;">
                             <button nz-button>
