--- a/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/cra-detail/cra-detail.component.html
+++ b/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/cra-detail/cra-detail.component.html
@@ -24,7 +24,7 @@
     </div>
     <div class="contenu">
         <div nz-row>
-            <div nz-col nzSpan="12">
+            <div nz-col nzSpan="10">
                 <div class="mi-titre">
                     Informations
                 </div>
@@ -50,7 +50,7 @@
                     </div>
                 </div>
             </div>
-            <div nz-col nzSpan="12" style="text-align: right;">
+            <div nz-col nzSpan="14" style="text-align: right;">
                 <button (click)="valider()" nz-button nzType="primary" [disabled]="!fichier" style="margin-left: 20px;">
                     <i nz-icon nzType="check"></i>
                     Valider
@@ -60,11 +60,11 @@
                     Attacher un justificatif
                     <input #inputFile type="file" [(ngModel)]="fichier"  (change)="onSelectFile($event)" style="display: none;">
                 </button>
-                <button nz-button style="margin-left: 20px;">
+                <button nz-button style="margin-left: 20px;"  [disabled]="!fichier">
                     <i nz-icon nzType="download"></i>
                     Sauvegarder
                 </button>
-                <button nz-button style="margin-left: 20px;">
+                <button nz-button style="margin-left: 20px;"  [disabled]="!fichier">
                     <i nz-icon nzType="download"></i>
                     Exporter
                 </button>
