--- a/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/documents/documents.component.html
+++ b/Documents/Developpement/AngularProjects/temeritati-admin/src/app/pages/documents/documents.component.html
@@ -1,33 +1,27 @@
 <div class="bg">
     <div style="margin-top: 20px; margin-left: 20px;">
         <nz-breadcrumb>
-            <nz-breadcrumb-item>Factures</nz-breadcrumb-item>
+            <nz-breadcrumb-item>Documents contractuels</nz-breadcrumb-item>
             <nz-breadcrumb-item>
-                <a>Toutes</a>
+                <a>Tous</a>
             </nz-breadcrumb-item>
 
         </nz-breadcrumb>
-        <div class="titre">Factures</div>
+        <div class="titre">Documents contractuels</div>
         <div class="soustitre">
-            Retrouvez ici l’ensemble des CRA de vos missions en cours, en attente de validation et autres. Une fois ceux-ci compléter cliquez sur envoyer pour les transmettre à votre manager.
+            Retrouvez ici l'ensemble des documents contractuels relatifs aux missions en cours
         </div>
     </div>
 
     <div style="margin-top: 20px">
         <ul nz-menu nzMode="horizontal">
-            <li nz-menu-item (click)="selectionner('aSaisir')" [nzSelected]="aSaisir">
+            <li nz-menu-item (click)="selectionner('validees')" [nzSelected]="validees">
                 <span class="menu-design">A envoyer</span>
                 <span class="badge">
-                    03
+                    02
                 </span>
             </li>
-            <li nz-menu-item (click)="selectionner('rejetees')" [nzSelected]="rejetees">
-                <span class="menu-design">Envoyées</span>
-                <span class="badge">
-                    03
-                </span>
-            </li>
-            <li nz-menu-item (click)="selectionner('enAttente')" [nzSelected]="enAttente">
+            <li nz-menu-item (click)="selectionner('archivees')" [nzSelected]="archivees">
                 <span class="menu-design">Archivés</span>
                 <span class="badge">
                     02
@@ -37,7 +31,7 @@
     </div>
 
     <div class="contenu">
-        <div *ngIf="aSaisir">
+        <div *ngIf="validees">
             <div style="margin:40px">
                 <div style="margin-bottom:20px">
                     <div nz-row>
@@ -87,11 +81,11 @@
                         </div>
                     </div>
                 </div>
-                <nz-table #sortTable [nzData]="listOfData" nzTableLayout="fixed">
+                <nz-table #sortTable [nzData]="listOfDataFacture" nzTableLayout="fixed">
                     <thead>
                         <tr>
                             <th style="width: 80px;" [nzChecked]="false"></th>
-                            <th *ngFor="let column of listOfColumn" [nzSortFn]="column.compare" [nzSortPriority]="column.priority">
+                            <th *ngFor="let column of listOfColumnDocuments" [nzSortFn]="column.compare" [nzSortPriority]="column.priority">
                                 <b>
                                     {{ column.title }}
                                 </b>
@@ -115,24 +109,39 @@
                             </td>
                             <td>
                                 <a routerLink="/factures/detail">Modifier</a> &nbsp;&nbsp;
-                                <a routerLink="/factures/detail">Archiver</a> &nbsp;&nbsp;
                             </td>
                         </tr>
                     </tbody>
                 </nz-table>
             </div>
         </div>
-        <div *ngIf="rejetees">
+        <div *ngIf="archivees">
             <div style="margin:40px">
                 <div style="margin-bottom:20px">
                     <div nz-row>
-                        <div nz-col nzSpan="16">
+                        <div nz-col nzSpan="2">
+                            <button nz-button nzType="primary" style="width: 100%;">
+                                Clients
+                            </button>
+                        </div>
+                        <div nz-col nzSpan="2">
+                            <button nz-button style="width: 100%;">
+                                Sous-traitants
+                            </button>
+                        </div>
+                        <div nz-col nzSpan="10">
 
+                        </div>
+                        <div nz-col nzSpan="2">
+                            <button nz-button style="width: 90%;">
+                                <i nz-icon nzType="container" nzTheme="outline"></i>
+                                Archiver
+                            </button>
                         </div>
                         <div nz-col nzSpan="4">
                             <div>
                                 <nz-input-group nzSearch [nzAddOnAfter]="prefixTemplateUser">
-                                    <input type="text" nz-input placeholder="Rechercher une évaluation" />
+                                    <input type="text" nz-input placeholder="Rechercher une facture" />
                                 </nz-input-group>
                                 <ng-template #prefixTemplateUser>
                                     <button nz-button nzType="primary" nzSearch>
@@ -144,7 +153,7 @@
                         <div nz-col nzSpan="4">
                             <div style="margin-left: 20px">
                                 <nz-input-group nzSearch [nzSuffix]="prefixTemplateUser2">
-                                    <input type="text" nz-input placeholder="Chercher une date" />
+                                    <input type="text" nz-input placeholder="Chercher un mois" />
                                 </nz-input-group>
                                 <ng-template #prefixTemplateUser2>
 
@@ -156,11 +165,11 @@
                         </div>
                     </div>
                 </div>
-                <nz-table #sortTable [nzData]="listOfData" nzTableLayout="fixed">
+                <nz-table #sortTable [nzData]="listOfDataFacture" nzTableLayout="fixed">
                     <thead>
                         <tr>
                             <th style="width: 80px;" [nzChecked]="false"></th>
-                            <th *ngFor="let column of listOfColumn" [nzSortFn]="column.compare" [nzSortPriority]="column.priority">
+                            <th *ngFor="let column of listOfColumnDocuments" [nzSortFn]="column.compare" [nzSortPriority]="column.priority">
                                 <b>
                                     {{ column.title }}
                                 </b>
@@ -172,71 +181,18 @@
                             <td style="width: 80px;" [nzChecked]="false"></td>
                             <td>{{ data.name }}</td>
                             <td>{{ data.chinese }}</td>
-                            <td>{{ data.math }}</td>
-                            <td>{{ data.math2 }}</td>
                             <td>
-                                <a routerLink="/factures/detail">Prévisualiser</a> &nbsp;&nbsp;
-                                <a routerLink="/factures/detail">Archiver</a> &nbsp;&nbsp;
+                                <span class="">
+                                    {{ data.math }}
+                                </span>
                             </td>
-                        </tr>
-                    </tbody>
-                </nz-table>
-            </div>
-        </div>
-        <div *ngIf="enAttente">
-            <div style="margin:40px">
-                <div style="margin-bottom:20px">
-                    <div nz-row>
-                        <div nz-col nzSpan="16">
-
-                        </div>
-                        <div nz-col nzSpan="4">
-                            <div>
-                                <nz-input-group nzSearch [nzAddOnAfter]="prefixTemplateUser">
-                                    <input type="text" nz-input placeholder="Rechercher une évaluation" />
-                                </nz-input-group>
-                                <ng-template #prefixTemplateUser>
-                                    <button nz-button nzType="primary" nzSearch>
-                                        <i nz-icon nzType="search"></i>
-                                    </button>
-                                </ng-template>
-                            </div>
-                        </div>
-                        <div nz-col nzSpan="4">
-                            <div style="margin-left: 20px">
-                                <nz-input-group nzSearch [nzSuffix]="prefixTemplateUser2">
-                                    <input type="text" nz-input placeholder="Chercher une date" />
-                                </nz-input-group>
-                                <ng-template #prefixTemplateUser2>
-
-                                    <i nz-icon nzType="calendar" style="color: #F759AB"></i>
-
-                                </ng-template>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-                <nz-table #sortTable [nzData]="listOfData" nzTableLayout="fixed">
-                    <thead>
-                        <tr>
-                            <th style="width: 80px;" [nzChecked]="false"></th>
-                            <th *ngFor="let column of listOfColumn" [nzSortFn]="column.compare" [nzSortPriority]="column.priority">
-                                <b>
-                                    {{ column.title }}
-                                </b>
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr *ngFor="let data of sortTable.data">
-                            <td style="width: 80px;" [nzChecked]="false"></td>
-                            <td>{{ data.name }}</td>
-                            <td>{{ data.chinese }}</td>
-                            <td>{{ data.math }}</td>
-                            <td>{{ data.math2 }}</td>
                             <td>
-                                <a routerLink="/factures/detail">Prévisualiser</a> &nbsp;&nbsp;
+                                <span class="">
+                                    {{ data.math2 }}
+                                </span>
+                            </td>
+                            <td>
+                                <a routerLink="/factures/detail">Modifier</a> &nbsp;&nbsp;
                             </td>
                         </tr>
                     </tbody>
