--- a/Documents/Developpement/AngularProjects/tameri erp/tameri-front/src/app/_components/appbar/appbar.component.html
+++ b/Documents/Developpement/AngularProjects/tameri erp/tameri-front/src/app/_components/appbar/appbar.component.html
@@ -15,6 +15,9 @@
 
             </ul>
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" [routerLink]="'company'">Companies</a>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Muanza Kangudie
