--- a/Documents/Developpement/AngularProjects/tameri erp/tameri-front/src/styles.scss
+++ b/Documents/Developpement/AngularProjects/tameri erp/tameri-front/src/styles.scss
@@ -1,4 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
-
-/* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+div.dt-buttons {
+    .nouveau {
+        background-color: red !important;
+        color: white !important;
+    }
+}
