--- a/Documents/Developpement/AngularProjects/tameri erp/tameri-front/src/app/_components/appbar/appbar.component.html
+++ b/Documents/Developpement/AngularProjects/tameri erp/tameri-front/src/app/_components/appbar/appbar.component.html
@@ -16,7 +16,10 @@
             </ul>
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" [routerLink]="'company'">Companies</a>
+                    <a class="nav-link active" aria-current="page" [routerLink]="'community'" routerLinkActive="active">Communities</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" [routerLink]="'company'" routerLinkActive="active">Companies</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
