--- a/Documents/Developpement/AngularProjects/tameri erp/tameri-front/src/app/pages/community/community-list/community-list.component.html
+++ b/Documents/Developpement/AngularProjects/tameri erp/tameri-front/src/app/pages/community/community-list/community-list.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid" style="margin-top: 16px;">
-    <h1>Companies</h1>
+    <h1>Communities</h1>
     <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam maximus aliquam velit, sed malesuada ligula blandit vel.
     </p>
@@ -13,15 +13,15 @@
                             <th>ID</th>
                             <th>Name</th>
                             <th>Type</th>
-                            <th>Owner</th>
+                            <th>Description</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let company of companies" (click)="edit(company)">
-                            <td>{{company.id}}</td>
-                            <td>{{company.name}}</td>
-                            <td>{{company.type}}</td>
-                            <td>{{company.owner.names}}</td>
+                        <tr *ngFor="let community of communities" (click)="edit(community)">
+                            <td>{{community.id}}</td>
+                            <td>{{community.name}}</td>
+                            <td>{{community.type}}</td>
+                            <td>{{community.description}}</td>
                         </tr>
                     </tbody>
                 </table>
